@@ -1,3 +1,13 @@
+2014-06-04  James Hunt  <james.hunt@ubuntu.com>
+
+	* dbus/com.ubuntu.Upstart.xml: Renamed SetEnvMulti to SetEnvList and
+	  UnsetEnvMulti to UnsetEnvList for clarity.
+	* init/control.c:
+	  - control_set_env_list(): Renamed from control_set_env_multi().
+	  - control_unset_env_list(): Renamed from control_unset_env_multi().
+	  - control_unset_env(): Actually make it call control_unset_env_list().
+	* util/initctl.c: Updated to call renamed functions.
+
 2014-06-02  James Hunt  <james.hunt@ubuntu.com>
 
 	* dbus/com.ubuntu.Upstart.xml: Added 'SetEnvMulti' and 'UnsetEnvMulti'
@@ -8,8 +18,6 @@
 	  - control_set_env(): Retained 'SetEnv' implementation that now calls
 	    control_set_env_multi().
 	  - control_unset_env_multi(): Implementation for 'UnSetEnvMulti'.
-	  - control_unset_env(): Retained 'UnSetEnv' implementation that now calls
-	    control_unset_env_multi().
 	* util/initctl.c:
 	  - set_env_action(): Updated to call set_env_multi_sync().
 	  - unset_env_action(): Updated to call unset_env_multi_sync().
